fix(app): header white space no wrap

--- a/packages/app/src/app/header/header.component.scss
+++ b/packages/app/src/app/header/header.component.scss
@@ -11,8 +11,16 @@
   align-items: center;
   justify-content: center;
 
-  * {
+  .title,
+  .logo,
+  .content,
+  .menu {
     flex: 1;
+    white-space: nowrap;
+  }
+
+  .flex-0 {
+    flex: 0;
   }
 
   .title {
